<resources>
    <string name="app_name">DoSoptTemplate</string>

    <!-- bnv menu -->
    <string name="menu_home_do_android">DO ANDROID</string>
    <string name="menu_home_home">홈</string>
    <string name="menu_home_my_page">마이페이지</string>

    <!-- message -->
    <string name="double_back_press_message">뒤로 가기 버튼을 한 번 더 누르시면 종료됩니다.</string>

    <!--sign-->
    <string name="sign_id">ID</string>
    <string name="sign_id_hint">ID를 입력해 주세요.</string>
    <string name="sign_password">PASSWORD</string>
    <string name="sign_password_hint">PASSWORD를 입력해 주세요.</string>

    <!--sign in-->
    <string name="sign_in_title">Welcome to SOPT</string>
    <string name="sign_in">로그인</string>
    <string name="sign_in_sign_up"><u>회원가입하기</u></string>
    <string name="sign_in_success">로그인에 성공했습니다! (유저 id: %d)</string>
    <string name="sign_in_failed">ID와 PW를 확인해 주세요!</string>
    <string name="sign_in_auto_login_success">자동로그인 되었습니다!</string>

    <!--sign up-->
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_nickname">NICKNAME</string>
    <string name="sign_up_nickname_hint">NICKNAME을 입력해 주세요.</string>
    <string name="sign_up_mbti">MBTI</string>
    <string name="sign_up_mbti_hint">MBTI를 입력해 주세요.</string>
    <string name="sign_up_start">시작하기</string>
    <string name="sign_up_success">회원가입에 성공하였습니다!</string>
    <string name="sign_up_id_error">영문, 숫자가 포함된 6~10글자 이내의 아이디를 입력해 주세요.</string>
    <string name="sign_up_password_error">영문, 숫자, 특수문자가 포함된 6~12글자 이내의 비밀번호를 입력해 주세요.</string>
    <string name="sign_up_nickname_error">한 글자 이상의 닉네임을 입력해 주세요.</string>
    <string name="sign_up_mbti_error">형식에 맞는 MBTI를 입력해 주세요.</string>
    <string name="sign_up_failed">회원가입에 실패하였습니다!</string>

    <!-- my page -->
    <string name="my_page">MY PAGE</string>

    <!-- home -->
    <string name="home_name">%s %s</string>

    <!-- friend -->
    <string name="friend_profile_info_type_description">상태메시지</string>
    <string name="friend_profile_info_type_birth">선물하기</string>
    <string name="friend_birth">오늘 %d월 %d일</string>
    <string name="friend_music">%s-%s</string>

    <!-- dialog -->
    <string name="dialog_yes">네</string>
    <string name="dialog_no">아니오</string>

    <!-- logout -->
    <string name="logout">로그아웃</string>
    <string name="logout_dialog_context">정말로 로그아웃 하실건가요?</string>

    <!-- add friend -->
    <string name="add_friend">친구 추가</string>
    <string name="add_friend_name_hint">이름을 입력해주세요.</string>

    <!-- delete friend -->
    <string name="delete_friend">친구 삭제</string>
    <string name="delete_friend_context">정말로 삭제 하시겠습니까?</string>

</resources>