<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.sopt.dosopttemplate.presentation.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.SignUpActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/spacing30" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/spacing30" />

                <TextView
                    android:id="@+id/tv_sign_up_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing30"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAppearance="@style/TextAppearance.LargeTitle"
                    app:layout_constraintEnd_toStartOf="@id/gl_end"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_sign_up_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:text="@string/sign_id"
                    android:textAppearance="@style/TextAppearance.Title"
                    app:layout_constraintStart_toStartOf="@id/tv_sign_up_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sign_up_id"
                    style="@style/CustomTextInputLayout.Main3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomTextInputLayout.Main3"
                    app:layout_constraintEnd_toEndOf="@id/tv_sign_up_title"
                    app:layout_constraintStart_toStartOf="@id/tv_sign_up_id"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/sign_id_hint"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.Body" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sign_up_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing24"
                    android:text="@string/sign_password"
                    android:textAppearance="@style/TextAppearance.Title"
                    app:layout_constraintStart_toStartOf="@id/layout_sign_up_id"
                    app:layout_constraintTop_toBottomOf="@id/layout_sign_up_id" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sign_up_password"
                    style="@style/CustomTextInputLayout.Main3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomTextInputLayout.Main3"
                    app:layout_constraintEnd_toEndOf="@id/layout_sign_up_id"
                    app:layout_constraintStart_toStartOf="@id/layout_sign_up_id"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:hint="@string/sign_password_hint"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.Body" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tv_sign_up_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing24"
                    android:text="@string/sign_up_nickname"
                    android:textAppearance="@style/TextAppearance.Title"
                    app:layout_constraintStart_toStartOf="@id/layout_sign_up_password"
                    app:layout_constraintTop_toBottomOf="@id/layout_sign_up_password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sign_up_nickname"
                    style="@style/CustomTextInputLayout.Main3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomTextInputLayout.Main3"
                    app:layout_constraintEnd_toEndOf="@id/layout_sign_up_password"
                    app:layout_constraintStart_toStartOf="@id/layout_sign_up_password"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_nickname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:hint="@string/sign_up_nickname_hint"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.Body" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sign_up_mbti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing24"
                    android:text="@string/sign_up_mbti"
                    android:textAppearance="@style/TextAppearance.Title"
                    app:layout_constraintStart_toStartOf="@id/layout_sign_up_nickname"
                    app:layout_constraintTop_toBottomOf="@id/layout_sign_up_nickname" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sign_up_mbti"
                    style="@style/CustomTextInputLayout.Main3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomTextInputLayout.Main3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/layout_sign_up_nickname"
                    app:layout_constraintStart_toStartOf="@id/layout_sign_up_nickname"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_mbti">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_mbti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="@dimen/spacing30"
                        android:hint="@string/sign_up_mbti_hint"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.Body" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing30"
            android:layout_marginBottom="@dimen/spacing30"
            android:paddingVertical="10dp"
            android:text="@string/sign_up_start"
            android:textAppearance="@style/TextAppearance.Headline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>